# Geopard

./: .editorconfig  .gitignore  Cargo.toml  README.gemini  README.md  com.ranfdev.Geopard.Devel.json  flake.nix  local-build.sh  meson.build  meson_options.txt  rustfmt.toml  shell.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-flatpak.yml  build-nix.yml  build-nixos.yml  deploy.yml  flatpak.yml
build-aux/: build-flatpak.sh  com.ranfdev.Geopard.Devel.json  com.ranfdev.Geopard.json  com.ranfdev.GeopardDevel.json  deploy-flatpak.sh  dist-vendor.sh  meson_post_install.py
data/: com.ranfdev.Geopard.desktop.in.in  com.ranfdev.Geopard.gschema.xml.in  com.ranfdev.Geopard.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: bookmarks.blp  bookmarks_window.blp  download_page.blp  input_page.blp  shortcuts.blp  tab.blp  window.blp
gemini/: Cargo.toml
gemini/src/: cert_provider.rs  client.rs  known_hosts.rs  lib.rs  parser.rs
hooks/: pre-commit.hook
nix/: blueprint-compiler.nix  build-flatpak.nix  default.nix  geopard.nix
po/: LINGUAS  POTFILES.in  bg.po  fr.po  geopard.pot  hi.po  it.po  meson.build  pt_BR.po  ru.po  uk.po
src/: bookmarks.rs  build_config.rs  build_config.rs.in  component.rs  config.rs  config.rs.in  download_page.rs  draw_ctx.rs  input_page.rs  known_hosts.rs  lossy_text_read.rs  macros.rs  main.rs  meson.build  session_provider.rs  tab.rs  window.rs
src/common/: mod.rs
src/gemini/: client.rs  mod.rs  parser.rs  renderer.rs
src/text_extensions/: gemini.rs  mod.rs
src/widgets/: bookmarks.rs  bookmarks_window.rs  download_page.rs  input_page.rs  mod.rs  page.rs  tab.rs  window.rs
src/widgets/pages/: blocks.rs  download.rs  hypertext.rs  input.rs  mod.rs
