[package]
name = "geopard"
version = "1.0.1"
authors = ["ranfdev <ranfdev@gmail.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs.git"
features = ["v4_6"]

[dependencies]
async-net = "1.4.7"
async-fs = "1.5.0"
url = "2.1.1"
thiserror = "1.0.20"
futures = "0.3.5"
regex = "1.3.9"
once_cell = "1.4.0"
anyhow = "1.0.32"
async-trait = "0.1.38"
async-native-tls = "0.3.3"
toml = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
env_logger = "0.8.1"
log = "0.4.0"
adw = { package = "libadwaita", git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"}

[patch."https://github.com/gtk-rs/gtk-rs-core.git"]
glib = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
gio = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
pango = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
glib-sys = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
gobject-sys = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
gio-sys = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
pango-sys = {git = "https://github.com/ranfdev/gtk-rs-core.git", branch = "props_macro"}
