[package]
name = "geopard"
version = "1.4.0"
authors = ["ranfdev <ranfdev@gmail.com>"]
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
package = "gtk4"
version = "0.6"
features = ["v4_8"]

[dependencies]
gemini = { path = "gemini" }
async-fs = "1.5.0"
url = "2.1.1"
thiserror = "1.0.20"
futures = "0.3.5"
once_cell = "1.4.0"
anyhow = "1.0.32"
async-trait = "0.1.38"
toml = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
env_logger = "0.8.1"
log = "0.4.0"
adw = { package = "libadwaita", version = "0.3", features = ["v1_3"]}
